src/test/ui/error-codes/E0507.stderr
error[E0507]: cannot move out of borrowed content
  --> $DIR/E0507.rs:22:5
   |
LL |     x.borrow().nothing_is_true(); //~ ERROR E0507
   |     ^^^^^^^^^^ cannot move out of borrowed content

error: aborting due to previous error

If you want more information on this error, try using "rustc --explain E0507"
